upgrade packages | fix z-index header

--- a/src/pages/Home/Header/styles.module.scss
+++ b/src/pages/Home/Header/styles.module.scss
@@ -3,7 +3,7 @@
   padding: 30px 40px;
   justify-content: space-between;
   align-items: center;
-  z-index: 10;
+  z-index: 100;
   position: fixed;
   width: 100%;
 
@@ -95,7 +95,7 @@
   width: 100%;
   height: 0;
   position: fixed;
-  z-index: 9;
+  z-index: 90;
   top: 0;
   left: 0;
   background: linear-gradient(to right, #072142, #8c2b7a 42%, #ff4d5a);
