--- a/src/pages/Home/NavigationBar/styles.module.scss
+++ b/src/pages/Home/NavigationBar/styles.module.scss
@@ -2,7 +2,7 @@
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  z-index: 100;
+  z-index: 80;
 
   @include Responsive(SM) {
     padding: 20px;
